[tool.poetry]
name = "experimentation_tool"
version = "0.1.0"
description = "Studies on building an experimentation platform"
authors = ["Dênis Araújo da Silva <silvadenisaraujo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "^0.0"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
